# clearpath_desktop-release

./: CHANGELOG.rst  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
clearpath_config_live/: CHANGELOG.rst  CMakeLists.txt  clearpath_config_handler.py  clearpath_config_live  clearpath_config_updater.py  clearpath_config_watcher.py  package.xml
clearpath_config_live/clearpath_config_live/: clearpath_config_handler.py  clearpath_config_live  clearpath_config_updater.py  clearpath_config_watcher.py  robot_description_client.py
clearpath_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_offboard_sensors/: CHANGELOG.rst  CMakeLists.txt
clearpath_offboard_sensors/config/: velodyne_lidar.yaml
clearpath_offboard_sensors/launch/: image_raw_to_ffmpeg.launch.py
clearpath_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
clearpath_viz/launch/: view_diagnostics.launch.py  view_model.launch.py  view_moveit.launch.py  view_navigation.launch.py  view_robot.launch.py
clearpath_viz/rviz/: nav2.rviz  robot.rviz
debian/: changelog  control  copyright  gbp.conf  rules
launch/: image_ffmpeg_to_raw.launch.py  velodyne_pointcloud.launch.py  view_model.launch.py  view_robot.launch.py
rpm/: template.spec
rviz/: model.rviz  moveit.rviz
