<?xml version="1.0"?>
<package format="3">
  <name>clearpath_offboard_sensors</name>
  <version>2.0.0</version>
  <description>Launch files for decompressing and consuming high-bandwidth sensor data on offboard computers</description>

  <maintainer email="civerachb@clearpathrobotics.com">Chris Iverach-Brereton</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
