<?xml version="1.0"?>
<package format="3">
  <name>clearpath_desktop</name>
  <version>2.0.0</version>
  <description>Packages for working with Clearpath Platforms from a ROS 2 desktop.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>
  <maintainer email="rkreinin@clearpathrobotics.com">Roni Kreinin</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>clearpath_config_live</exec_depend>
  <exec_depend>clearpath_offboard_sensors</exec_depend>
  <exec_depend>clearpath_platform_msgs</exec_depend>
  <exec_depend>clearpath_viz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
