<?xml version="1.0"?>
<package format="3">
  <name>clearpath_config_live</name>
  <version>0.0.1</version>
  <description>Live URDF Updater from Clearpath Configuration.</description>

  <maintainer email="lcamero@clearpathrobotics.com">Luis Camero</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>clearpath_generator_common</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
